examples/errors/error_final_reassignment.cay
// Error测试：final变量重新赋值
public class TestFinalReassignment {
    public static void main() {
        final int x = 10;
        x = 20;
        println(x);
    }
}
